@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,28 +35,18 @@
  *     Fixed according to 4669812 bug.
  *     Ported from JVMDI.
  *
- * @requires vm.continuations
  * @library /test/lib
  * @compile fieldacc01a.jasm
- * @compile --enable-preview -source ${jdk.version} fieldacc01.java
- * @run main/othervm/native --enable-preview -agentlib:fieldacc01 fieldacc01
+ * @compile fieldacc01.java
+ * @run main/othervm/native -agentlib:fieldacc01 fieldacc01
  */
 
 
 
 public class fieldacc01 {
 
-    final static int JCK_STATUS_BASE = 95;
-
     static {
-        try {
-            System.loadLibrary("fieldacc01");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load fieldacc01 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("fieldacc01");
     }
 
     static volatile int result;
