@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,23 +38,15 @@
  * COMMENTS
  *     Ported from JVMDI.
  *
- * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} framepop01a.java
- * @run main/othervm/native --enable-preview -agentlib:framepop01 framepop01
+ * @compile framepop01a.java
+ * @run main/othervm/native -agentlib:framepop01 framepop01
  */
 
 public class framepop01 {
 
     static {
-        try {
-            System.loadLibrary("framepop01");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load framepop01 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("framepop01");
     }
 
     static volatile int result;
