@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,8 +21,6 @@
  * questions.
  */
 
-import java.io.PrintStream;
-
 /*
  * @test
  *
@@ -39,27 +37,18 @@ import java.io.PrintStream;
  *     The test reproduced the bug on winNT 1.0fcs-E build.
  *     Ported from JVMDI test /nsk/regression/b4248826.
  *
- * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} mentry02.java
- * @run main/othervm/native --enable-preview -agentlib:mentry02 mentry02
+ * @compile mentry02.java
+ * @run main/othervm/native -agentlib:mentry02 mentry02
  */
 
 
 public class mentry02 {
 
-    final static int JCK_STATUS_BASE = 95;
     final static int MAX_LOOP = 100;
 
     static {
-        try {
-            System.loadLibrary("mentry02");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load mentry02 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("mentry02");
     }
 
     static volatile int result;
