@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,9 +21,6 @@
  * questions.
  */
 
-import java.io.PrintStream;
-
-
 /*
  * @test
  *
@@ -42,26 +39,16 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *     Fixed the 5004632 bug.
  *
- * @requires vm.continuations
  * @library /test/lib
  * @compile mexit01a.jasm
- * @compile --enable-preview -source ${jdk.version} mexit01.java
- * @run main/othervm/native --enable-preview -agentlib:mexit01 mexit01
+ * @compile mexit01.java
+ * @run main/othervm/native -agentlib:mexit01 mexit01
  */
 
 public class mexit01 {
 
-    final static int JCK_STATUS_BASE = 95;
-
     static {
-        try {
-            System.loadLibrary("mexit01");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load mexit01 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("mexit01");
     }
 
     static volatile int result;
