@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,7 +21,6 @@
  * questions.
  */
 
-import java.io.PrintStream;
 /*
  * @test
  *
@@ -43,11 +42,10 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *     Fixed the 5004632 bug.
  *
- * @requires vm.continuations
  * @library /test/lib
  * @compile mexit02a.jasm
- * @compile --enable-preview -source ${jdk.version} mexit02.java
- * @run main/othervm/native --enable-preview -agentlib:mexit02 mexit02
+ * @compile mexit02.java
+ * @run main/othervm/native -agentlib:mexit02 mexit02
  */
 
 
@@ -55,14 +53,7 @@ import java.io.PrintStream;
 public class mexit02 {
 
     static {
-        try {
-            System.loadLibrary("mexit02");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load mexit02 library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("mexit02");
     }
 
     static volatile int result;
