@@ -1,5 +1,5 @@
 /*
-* Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+* Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 *
 * This code is free software; you can redistribute it and/or modify it
@@ -26,13 +26,13 @@
 * @summary Tests class unloading on virtual threads
 *
 * @requires vm.continuations
-* @compile --enable-preview -source ${jdk.version} ClassUnloading.java
-* @run main/othervm --enable-preview -XX:-UseCompressedOops ClassUnloading
-* @run main/othervm --enable-preview -XX:+UseCompressedOops ClassUnloading
-* @run main/othervm --enable-preview -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk/internal/vm/Continuation,ClassUnloading ClassUnloading
+* @compile ClassUnloading.java
+* @run main/othervm -XX:-UseCompressedOops ClassUnloading
+* @run main/othervm -XX:+UseCompressedOops ClassUnloading
+* @run main/othervm -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk.internal.vm.Continuation::*,ClassUnloading::* ClassUnloading
 */
 
-// @run testng/othervm -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk/internal/vm/Continuation,Basic Basic
+// @run testng/othervm -Xcomp -XX:-TieredCompilation -XX:CompileOnly=jdk.internal.vm.Continuation::*,Basic::* Basic
 
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodHandles.Lookup;
